# har_flower

./: .gitignore  README.md  Untitled.ipynb  labels.txt  pyproject.toml  requirements.txt
android/: pyproject.toml  server.py  servertcp.py  testport.py
android/client/: build.gradle  local.properties
android/tflite_convertor/: convert_to_tflite-Copy1.py  convert_to_tflite.py
code/: client_har_fed.py  experimento_1_base_model.ipynb  server.py  unzip_all_csv.sh
code/model/: model_base_fold_3.tflite  model_base_fold_4.tflite
es_utils/: __init__.py
input/: X_test_multiclass_acc_gyro_magnet.csv  X_test_uniclass.csv  X_test_uniclass_acc_3d.csv  X_train_multiclass_acc_gyro_magnet.csv  X_train_uniclass.csv  X_train_uniclass_acc_3d.csv  user1_model1_test.csv  user1_model1_train.csv  user1_test.csv  user1_train.csv  y_test_multiclass_acc_gyro_magnet.csv  y_test_uniclass.csv  y_train_multiclass_acc_gyro_magnet.csv  y_train_uniclass_acc_3d.csv
notebooks/: client_har.py  client_har_fed.py  client_har_fed_all.py  convert_to_tflite.py  es_utils.py  experimento_1_base_model.ipynb  experimento_2_base.ipynb  federated.txt  fold_0_test_cvs.json  fold_1_test_cvs.json  fold_3_test_cvs.json  fold_4_test_cvs.json  gen_model.py  har_2.ipynb  har_2.py  har_tf.ipynb  run_all_clients.sh  server.py  server_2.py  test_args.py  tf_lite_converter.py
notebooks/model/: model.tflite  model_base_fold_0.tflite  model_base_fold_1.tflite  model_base_fold_2.tflite  model_base_fold_3.tflite  model_base_fold_4.tflite  modelfold_0.tflite  modelfold_1.tflite  modelfold_2.tflite  modelfold_3.tflite  (+1 more)
(+587 files in other folders)
