[build-system]
requires = [
    "poetry==1.1.13",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "android_flwr_tensorflow"
version = "0.1.0"
description = "Android Example"
authors = ["The Flower Authors <enquiries@flower.dev>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flwr = "^0.17.0"
# flwr = { path = "../../", develop = true }  # Development
pandas = "^1.4.3"
numpy = "^1.23.0"
keras-tuner = "^1.1.2"
scikit-multilearn = "^0.2.0"
sklearn = "^0.0"
jupyter-client = "^7.3.4"
MarkupSafe = "^2.1.1"
notebook = "^6.4.12"
traitlets = "^5.3.0"
jupyterlab = "^3.4.3"
tensorflow-gpu = "^2.9.1"

[tool.poetry.dev-dependencies]
